# parallel

./: Cargo.toml  README.md
parallel_macro/: Cargo.toml
parallel_macro/src/: first.rs  lib.rs  parallel.rs  timeout.rs  timeout_with_result.rs
parallel_macro_core/: Cargo.toml
parallel_macro_core/src/: lib.rs
src/: atomic_bool.rs  channel.rs  custom_error.rs  hello_world_main.rs  mutex.rs
src/tests/: mod.rs  parallel_tests.rs  simple_test.rs  timeout_tests.rs
